Introduce Java record